# evergreen-mcp-server

./: .gitignore  Dockerfile  PATCH_CLI_README.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/evergreen_mcp/: __init__.py  evergreen.py  evergreen_graphql_client.py  evergreen_queries.py  failed_jobs_tools.py  mcp_tools.py  models.py  oidc_auth.py  server.py  waterfall_tools.py
src/evergreen_waterfall_triage/: README.md  __init__.py  add_variant_tasks_cli.py  analysis.py  artifact_download_cli.py  auth.py  cli.py  fetch.py  investigation.py  investigation_cli.py  models.py  patch_api.py  patch_cli.py  restart_cli.py  urls.py
tests/: test_add_variant_tasks_cli.py  test_artifact_download_cli.py  test_basic.py  test_evergreen_waterfall_investigation.py  test_evergreen_waterfall_investigation_cleanup.py  test_evergreen_waterfall_investigation_cli.py  test_evergreen_waterfall_triage_analysis.py  test_evergreen_waterfall_triage_cli.py  test_evergreen_waterfall_triage_fetch.py  test_evergreen_waterfall_triage_urls.py  test_mcp_client.py  test_oidc_auth.py  test_patch_api.py  test_patch_cli.py  test_restart_cli.py  test_waterfall_graphql_client.py  test_waterfall_tool.py
